--- a/auth.html
+++ b/auth.html
@@ -1,69 +1,292 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ukno Club - Auth</title>
-  <link rel="stylesheet" href="auth.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Authentication - Ukno Club</title>
+    <link rel="stylesheet" href="auth.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <div class="auth-container">
-    <div class="left-pane">
-      <a href="index.html" class="home-button">Home</a>
-      <img src="assets/logo.png" alt="Ukno Club Logo" class="logo">
-      <div class="tagline">
-        <span class="learn">Learn</span>
-        <span class="freely">Freely!</span>
-      </div>
+    <div class="auth-container">
+        <div class="auth-box">
+            <div class="logo-container">
+                <img src="assets/logo.png" alt="Ukno Club" class="auth-logo">
+            </div>
+
+            <div id="loginForm" class="auth-form">
+                <h2>Login</h2>
+                <div class="form-group">
+                    <label for="loginUsername">Username:</label>
+                    <input type="text" id="loginUsername" required>
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">Password:</label>
+                    <input type="password" id="loginPassword" required>
+                </div>
+                <button id="loginBtn" class="auth-button">Login</button>
+                <p class="auth-message" id="loginMessage"></p>
+                <p class="toggle-link">Don't have an account? <a href="#" id="showRegister">Register here</a></p>
+                 <p class="admin-link"><a href="#" id="showAdminLogin">Admin Login</a></p> </div>
+
+            <div id="registerForm" class="auth-form hidden">
+                <h2>Register</h2>
+                <div class="form-group">
+                    <label for="registerUsername">Username:</label>
+                    <input type="text" id="registerUsername" required>
+                </div>
+                 <div class="form-group">
+                     <label for="registerFullName">Full Name:</label>
+                     <input type="text" id="registerFullName">
+                </div>
+                 <div class="form-group">
+                     <label for="registerEmail">Email:</label>
+                     <input type="email" id="registerEmail">
+                </div>
+                <div class="form-group">
+                    <label for="registerPassword">Password:</label>
+                    <input type="password" id="registerPassword" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirmPassword">Confirm Password:</label>
+                    <input type="password" id="confirmPassword" required>
+                </div>
+                <button id="registerBtn" class="auth-button">Register</button>
+                <p class="auth-message" id="registerMessage"></p>
+                <p class="toggle-link">Already have an account? <a href="#" id="showLogin">Login here</a></p>
+            </div>
+
+            <div id="adminLoginForm" class="auth-form hidden">
+                <h2>Admin Login</h2>
+                <div class="form-group">
+                    <label for="adminUsername">Admin Username:</label>
+                    <input type="text" id="adminUsername" required>
+                </div>
+                <div class="form-group">
+                    <label for="adminPassword">Admin Password:</label>
+                    <input type="password" id="adminPassword" required>
+                </div>
+                <button id="adminLoginBtn" class="auth-button">Login as Admin</button>
+                <p class="auth-message" id="adminLoginMessage"></p>
+                <p class="toggle-link"><a href="#" id="hideAdminLogin">Back to User Login</a></p>
+            </div>
+
+        </div>
     </div>
 
-    <div class="right-pane">
-      <div class="auth-form-container">
-        <div class="toggle-buttons">
-          <button id="signupBtn" class="active">Sign up</button>
-          <button id="loginBtn">Log In</button>
-        </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const loginForm = document.getElementById('loginForm');
+            const registerForm = document.getElementById('registerForm');
+            const adminLoginForm = document.getElementById('adminLoginForm'); // Admin login form
 
-        <div class="form-container">
-          <form id="signup-form" class="form">
-            <input type="email" placeholder="EMAIL ID" required>
-            <input type="text" placeholder="FIRST NAME" required>
-            <input type="text" placeholder="LAST NAME" required>
-            <div class="password-container">
-              <input type="password" id="signupPassword" placeholder="PASSWORD" required>
-              <i class="fas fa-eye show-password"></i>
-            </div>
-            <input type="password" placeholder="CONFIRM PASSWORD" required>
-            <input type="text" placeholder="USERNAME" required>
-            <button type="submit" class="submit-btn">SETUP ACCOUNT</button>
-            <p class="privacy-note">We always protect your privacy, and will not share your information.</p>
-          </form>
+            const showRegisterLink = document.getElementById('showRegister');
+            const showLoginLink = document.getElementById('showLogin');
+             const showAdminLoginLink = document.getElementById('showAdminLogin'); // Link to show admin login
+             const hideAdminLoginLink = document.getElementById('hideAdminLogin'); // Link to hide admin login
 
-          <form id="login-form" class="form hidden">
-            <input type="email" id="loginEmail" placeholder="EMAIL ID" required>
-            <div class="password-container">
-              <input type="password" id="loginPassword" placeholder="PASSWORD" required>
-              <i class="fas fa-eye show-password"></i>
-            </div>
-            <div class="login-options">
-              <label>
-                <input type="checkbox" id="rememberMe"> Remember me
-              </label>
-              <a href="#" class="forgot-password">Forgot Password?</a>
-            </div>
-            <button type="submit" class="submit-btn">LOG IN</button>
-            <p class="privacy-note">Welcome back to Ukno Club!</p>
-            <div id="loginErrorMessage" class="error-message" style="display: none;">
-              Invalid credentials. Please try again.
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <script src="script.js"></script>
+            const loginUsernameInput = document.getElementById('loginUsername');
+            const loginPasswordInput = document.getElementById('loginPassword');
+            const loginBtn = document.getElementById('loginBtn');
+            const loginMessage = document.getElementById('loginMessage');
+
+            const registerUsernameInput = document.getElementById('registerUsername');
+             const registerFullNameInput = document.getElementById('registerFullName'); // Added
+             const registerEmailInput = document.getElementById('registerEmail'); // Added
+            const registerPasswordInput = document.getElementById('registerPassword');
+            const confirmPasswordInput = document.getElementById('confirmPassword');
+            const registerBtn = document.getElementById('registerBtn');
+            const registerMessage = document.getElementById('registerMessage');
+
+             const adminUsernameInput = document.getElementById('adminUsername'); // Admin username input
+             const adminPasswordInput = document.getElementById('adminPassword'); // Admin password input
+             const adminLoginBtn = document.getElementById('adminLoginBtn'); // Admin login button
+             const adminLoginMessage = document.getElementById('adminLoginMessage'); // Admin login message
+
+
+            // --- localStorage Keys ---
+             const USERS_STORAGE_KEY = 'uknoClubUsers'; // New key for user data
+             const ADMIN_AUTH_KEY = 'adminAuthenticated'; // Keep admin key separate
+
+
+            // --- Helper function to get user data from localStorage ---
+             function getUsers() {
+                 const usersJson = localStorage.getItem(USERS_STORAGE_KEY);
+                 try {
+                     return usersJson ? JSON.parse(usersJson) : {};
+                 } catch (e) {
+                     console.error("Error parsing users data from localStorage:", e);
+                     return {}; // Return empty object if parsing fails
+                 }
+             }
+
+            // --- Helper function to save user data to localStorage ---
+             function saveUsers(usersObject) {
+                 localStorage.setItem(USERS_STORAGE_KEY, JSON.stringify(usersObject));
+             }
+
+
+            // --- Helper function to clear messages ---
+            function clearMessages() {
+                loginMessage.textContent = '';
+                registerMessage.textContent = '';
+                adminLoginMessage.textContent = ''; // Clear admin message
+            }
+
+
+            // --- Toggle Forms ---
+            showRegisterLink.addEventListener('click', function(e) {
+                e.preventDefault();
+                loginForm.classList.add('hidden');
+                adminLoginForm.classList.add('hidden'); // Hide admin form
+                registerForm.classList.remove('hidden');
+                clearMessages();
+            });
+
+            showLoginLink.addEventListener('click', function(e) {
+                e.preventDefault();
+                registerForm.classList.add('hidden');
+                adminLoginForm.classList.add('hidden'); // Hide admin form
+                loginForm.classList.remove('hidden');
+                clearMessages();
+            });
+
+             // Show Admin Login Form
+             showAdminLoginLink.addEventListener('click', function(e) {
+                 e.preventDefault();
+                 loginForm.classList.add('hidden');
+                 registerForm.classList.add('hidden');
+                 adminLoginForm.classList.remove('hidden');
+                 clearMessages();
+             });
+
+             // Hide Admin Login Form
+             hideAdminLoginLink.addEventListener('click', function(e) {
+                 e.preventDefault();
+                 adminLoginForm.classList.add('hidden');
+                 loginForm.classList.remove('hidden'); // Go back to user login
+                 registerForm.classList.add('hidden');
+                 clearMessages();
+             });
+
+
+            // --- Registration ---
+            registerBtn.addEventListener('click', function() {
+                clearMessages();
+                const username = registerUsernameInput.value.trim();
+                 const fullName = registerFullNameInput.value.trim(); // Added
+                 const email = registerEmailInput.value.trim(); // Added
+                const password = registerPasswordInput.value.trim();
+                const confirmPassword = confirmPasswordInput.value.trim();
+
+                // Basic validation
+                if (!username || !password || !confirmPassword) {
+                    registerMessage.textContent = 'Please fill all required fields.';
+                    return;
+                }
+
+                if (password !== confirmPassword) {
+                    registerMessage.textContent = 'Passwords do not match.';
+                    return;
+                }
+
+                // Check if username already exists
+                const users = getUsers();
+                if (users[username]) {
+                    registerMessage.textContent = 'Username already exists.';
+                    return;
+                }
+
+                // Store new user data including new fields
+                 users[username] = {
+                     password: password, // In a real app, hash the password!
+                     fullName: fullName, // Store full name
+                     email: email // Store email
+                 };
+
+                saveUsers(users); // Save updated users object
+
+                registerMessage.textContent = 'Registration successful! You can now login.';
+                registerMessage.style.color = 'var(--success)'; // Style for success
+                // Optionally clear registration form or switch to login form
+                 registerForm.reset(); // Clear the form
+                 setTimeout(() => {
+                     showLoginLink.click(); // Automatically switch to login form after a delay
+                 }, 2000); // Switch after 2 seconds
+            });
+
+
+            // --- Login ---
+            loginBtn.addEventListener('click', function() {
+                clearMessages();
+                const username = loginUsernameInput.value.trim();
+                const password = loginPasswordInput.value.trim();
+
+                if (!username || !password) {
+                    loginMessage.textContent = 'Please enter username and password.';
+                    return;
+                }
+
+                // Check user credentials
+                const users = getUsers();
+                const user = users[username];
+
+                if (user && user.password === password) { // In a real app, compare hashed passwords
+                    // Authentication successful!
+                    localStorage.setItem('userAuthenticated', 'true'); // Mark user as authenticated
+                    localStorage.setItem('loggedInUsername', username); // Store the username
+                    loginMessage.textContent = 'Login successful! Redirecting...';
+                    loginMessage.style.color = 'var(--success)';
+                    window.location.href = "dashboard.html"; // Redirect to dashboard
+                } else {
+                    loginMessage.textContent = 'Invalid username or password.';
+                    loginMessage.style.color = 'var(--error)'; // Style for error
+                }
+            });
+
+            // --- Admin Login ---
+             adminLoginBtn.addEventListener('click', function() {
+                 clearMessages();
+                 const adminUsername = adminUsernameInput.value.trim();
+                 const adminPassword = adminPasswordInput.value.trim();
+
+                 // Basic hardcoded admin credentials (Replace in a real app!)
+                 const ADMIN_USERNAME = 'admin';
+                 const ADMIN_PASSWORD = 'adminpassword'; // Use a strong password!
+
+                 if (!adminUsername || !adminPassword) {
+                     adminLoginMessage.textContent = 'Please enter admin username and password.';
+                     return;
+                 }
+
+                 if (adminUsername === ADMIN_USERNAME && adminPassword === ADMIN_PASSWORD) {
+                     // Admin authentication successful!
+                     localStorage.setItem(ADMIN_AUTH_KEY, 'true'); // Mark admin as authenticated
+                     localStorage.removeItem('userAuthenticated'); // Ensure user authentication is removed
+                     localStorage.removeItem('loggedInUsername'); // Ensure user username is removed
+                     adminLoginMessage.textContent = 'Admin login successful! Redirecting...';
+                     adminLoginMessage.style.color = 'var(--success)';
+                      // Redirect to admin dashboard
+                      window.location.href = "admin-dashboard.html"; // Redirect to admin dashboard
+                 } else {
+                     adminLoginMessage.textContent = 'Invalid admin username or password.';
+                     adminLoginMessage.style.color = 'var(--error)';
+                 }
+             });
+
+             // Check if admin is already authenticated on page load and redirect
+             if (localStorage.getItem(ADMIN_AUTH_KEY)) {
+                  // If already admin, redirect to admin dashboard immediately
+                  // Removed automatic redirect on auth.html load to allow user login even if admin is authenticated
+                  // The dashboard will handle the redirect if user tries to access admin page.
+             }
+
+        });
+    </script>
+
 </body>
 </html>
